--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <title>XYLENEX SIA — Mobile Apps</title>
     <meta
       name="description"
-      content="XYLENEX SIA (Google Play Developer ID: 5097653683382524442) — Mobile apps & digital products. Contact: contact@xylenexdev.com"
+      content="XYLENEX SIA (Google Play Developer ID: 5097653683382524442) — Developer website with contact info, privacy policy, and terms."
     />
     <meta name="theme-color" content="#0b1220" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -50,8 +52,8 @@
 
             <div class="cta">
               <!-- Add your real Google Play developer page link later -->
-              <a class="btn" href="#" target="_blank" rel="noopener">View on Google Play</a>
-              <a class="btn ghost" href="#coming-soon">Apps coming soon</a>
+              <a class="btn" href="#coming-soon">Apps coming soon</a>
+              <a class="btn ghost" href="#contact">Contact us</a>
             </div>
 
             <div class="mini">
@@ -66,22 +68,25 @@
             </div>
 
             <p class="muted small" style="margin-top: 12px;">
-              Developer ID: <strong>5097653683382524442</strong>
+              Google Play Developer ID: <strong>5097653683382524442</strong>
             </p>
           </div>
 
-          <!-- Coming soon banner (replaces screenshots/apps preview) -->
-          <div class="hero-card coming-soon">
-            <div class="coming-box">
-              <span class="coming-badge">Coming Soon</span>
-              <h3>Our mobile apps are launching soon</h3>
-              <p>
-                We are currently preparing and publishing our applications.
-                Please check back soon or contact us for more information.
+          <!-- BIG Coming Soon card on the right -->
+          <div class="hero-card">
+            <div class="coming-banner">
+              <span class="coming-label">🚀 Coming Soon</span>
+              <h2>Our Apps Are Launching Soon on Google Play</h2>
+              <p class="coming-text">
+                XYLENEX SIA is currently preparing and publishing its mobile applications.
+                Once available, they will appear on our official Google Play developer page.
               </p>
-              <div class="card-actions" style="margin-top: 12px;">
-                <a class="btn small" href="#contact">Contact us</a>
-                <a class="btn small ghost" href="#privacy">Privacy Policy</a>
+              <p class="coming-sub">
+                For updates, support, or business inquiries, contact us anytime.
+              </p>
+              <div class="coming-actions">
+                <a href="#contact" class="btn">Contact Us</a>
+                <a href="#privacy" class="btn ghost">Privacy Policy</a>
               </div>
             </div>
           </div>
@@ -89,26 +94,27 @@
       </section>
 
       <!-- COMING SOON SECTION -->
-      <section class="section alt" id="coming-soon">
+      <section id="coming-soon" class="section alt">
         <div class="container">
           <div class="section-head">
-            <h2>Our Apps Are Coming Soon</h2>
+            <h2>Apps Coming Soon</h2>
             <p class="muted">
-              We are currently preparing our applications for release on Google Play.
+              We are preparing our first releases. This page will be updated as soon as apps are published.
             </p>
           </div>
 
-          <div class="card" style="max-width: 760px; margin: 0 auto; text-align: center;">
-            <h3>🚀 Launch in progress</h3>
+          <div class="card" style="max-width: 860px; margin: 0 auto; text-align: center;">
+            <h3>✅ Official Developer Website</h3>
             <p>
-              XYLENEX SIA is actively developing and publishing mobile applications.
-              Once available, they will appear on our Google Play developer page.
+              This website belongs to <strong>XYLENEX SIA</strong> and is provided for identification,
+              support, and policy information for our Google Play applications.
             </p>
             <p class="muted">
-              Want updates? Contact us and we’ll share release information.
+              Developer ID: <strong>5097653683382524442</strong>
             </p>
             <div style="margin-top: 16px;">
-              <a class="btn" href="#contact">Contact us</a>
+              <a class="btn" href="#contact">Contact Support</a>
+              <a class="btn ghost" href="#terms">Terms</a>
             </div>
           </div>
         </div>
@@ -131,9 +137,15 @@
                 <li><span>Legal name</span><strong>XYLENEX SIA</strong></li>
                 <li><span>Developer name</span><strong>XYLENEX SIA</strong></li>
                 <li><span>Developer ID</span><strong>5097653683382524442</strong></li>
-                <li><span>Address</span><strong>Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050</strong></li>
+                <li>
+                  <span>Address</span>
+                  <strong>Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050</strong>
+                </li>
                 <li><span>Phone</span><strong><a href="tel:+37126205676">+371 26205676</a></strong></li>
-                <li><span>Email</span><strong><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></strong></li>
+                <li>
+                  <span>Email</span>
+                  <strong><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></strong>
+                </li>
                 <li>
                   <span>Website</span>
                   <strong><a href="https://xylenexdev.com" target="_blank" rel="noopener">xylenexdev.com</a></strong>
@@ -151,7 +163,7 @@
 
               <div class="note">
                 <strong>Tip:</strong> If Google Play asks for a developer website,
-                this page includes your identity and contact details in one place.
+                this page includes identity, contact details, and policies in one place.
               </div>
             </div>
           </div>
@@ -175,17 +187,13 @@
 
             <div class="card">
               <h3>Email</h3>
-              <p>
-                <a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a>
-              </p>
+              <p><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></p>
               <p class="muted">We usually reply within 1–2 business days.</p>
             </div>
 
             <div class="card">
               <h3>Phone</h3>
-              <p>
-                <a href="tel:+37126205676">+371 26205676</a>
-              </p>
+              <p><a href="tel:+37126205676">+371 26205676</a></p>
               <p class="muted">Available during standard business hours.</p>
             </div>
 
@@ -201,13 +209,13 @@
         </div>
       </section>
 
-      <!-- PRIVACY POLICY -->
+      <!-- PRIVACY -->
       <section id="privacy" class="section">
         <div class="container">
           <div class="section-head">
             <h2>Privacy Policy</h2>
             <p class="muted">
-              This Privacy Policy applies to all applications and services published by XYLENEX SIA
+              This Privacy Policy applies to applications and services published by XYLENEX SIA
               (Google Play Developer ID: 5097653683382524442).
             </p>
           </div>
@@ -248,9 +256,7 @@
               <li>Google Analytics for Firebase</li>
               <li>Google AdMob (if applicable)</li>
             </ul>
-            <p>
-              These services have their own privacy policies governing how they use data.
-            </p>
+            <p>These services have their own privacy policies governing how they use data.</p>
 
             <h3>5. Data Security</h3>
             <p>
@@ -270,10 +276,7 @@
             </p>
 
             <h3>8. Contact Us</h3>
-            <p>
-              If you have questions about this Privacy Policy, you can contact us at:
-            </p>
-
+            <p>If you have questions about this Privacy Policy, contact us at:</p>
             <p>
               <strong>XYLENEX SIA</strong><br />
               Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050<br />
@@ -281,21 +284,17 @@
               Phone: +371 26205676
             </p>
 
-            <p class="muted small">
-              Last updated: <span id="privacyUpdated"></span>
-            </p>
+            <p class="muted small">Last updated: <span id="privacyUpdated"></span></p>
           </div>
         </div>
       </section>
 
-      <!-- TERMS OF SERVICE -->
+      <!-- TERMS -->
       <section id="terms" class="section alt">
         <div class="container">
           <div class="section-head">
             <h2>Terms of Service</h2>
-            <p class="muted">
-              These Terms govern your use of applications and services provided by XYLENEX SIA.
-            </p>
+            <p class="muted">These Terms govern your use of applications and services provided by XYLENEX SIA.</p>
           </div>
 
           <div class="policy">
@@ -341,11 +340,8 @@
               means you accept the revised Terms.
             </p>
 
-            <h3>8. Contact Information</h3>
-            <p>
-              For questions regarding these Terms, contact us:
-            </p>
-
+            <h3>8. Contact</h3>
+            <p>For questions regarding these Terms, contact us:</p>
             <p>
               <strong>XYLENEX SIA</strong><br />
               Mazā Smilšu iela 8, Centra rajons, Rīga, LV-1050<br />
@@ -353,9 +349,7 @@
               Phone: +371 26205676
             </p>
 
-            <p class="muted small">
-              Last updated: <span id="termsUpdated"></span>
-            </p>
+            <p class="muted small">Last updated: <span id="termsUpdated"></span></p>
           </div>
         </div>
       </section>
