--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>XYLENEX SIA — Mobile Apps</title>
+    <title>XYLENEX SIA — ExamHero on Google Play</title>
     <meta
       name="description"
-      content="XYLENEX SIA (Google Play Developer ID: 5097653683382524442) — Developer website with contact info, privacy policy, and terms."
+      content="XYLENEX SIA (Google Play Developer ID: 5097653683382524442) — ExamHero is a tactical focus timer and study OS for students. Download on Google Play."
     />
     <meta name="theme-color" content="#0b1220" />
 
@@ -30,7 +30,7 @@
         </a>
 
         <nav class="menu" aria-label="Primary">
-          <a href="#coming-soon">Apps</a>
+          <a href="#examhero">ExamHero</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
           <a href="#privacy">Privacy</a>
@@ -45,15 +45,21 @@
         <div class="container hero-grid">
           <div>
             <p class="badge">Google Play Developer</p>
-            <h1>We build helpful mobile apps and digital experiences.</h1>
+            <h1>ExamHero is live on Google Play.</h1>
             <p class="lead">
-              XYLENEX SIA publishes apps focused on simplicity, reliability, and a great user experience.
+              A tactical focus timer and study OS for students — stay locked in, rank up, and crush exams.
             </p>
 
             <div class="cta">
-              <!-- Add your real Google Play developer page link later -->
-              <a class="btn" href="#coming-soon">Apps coming soon</a>
-              <a class="btn ghost" href="#contact">Contact us</a>
+              <a
+                class="btn"
+                href="https://play.google.com/store/apps/details?id=com.xylenexsia.examhero"
+                target="_blank"
+                rel="noopener"
+              >
+                Download ExamHero
+              </a>
+              <a class="btn ghost" href="#examhero">See features</a>
             </div>
 
             <div class="mini">
@@ -72,20 +78,27 @@
             </p>
           </div>
 
-          <!-- BIG Coming Soon card on the right -->
+          <!-- ExamHero banner card -->
           <div class="hero-card">
             <div class="coming-banner">
-              <span class="coming-label">🚀 Coming Soon</span>
-              <h2>Our Apps Are Launching Soon on Google Play</h2>
+              <span class="coming-label">🎯 ExamHero</span>
+              <h2>Stealth Focus for Students</h2>
               <p class="coming-text">
-                XYLENEX SIA is currently preparing and publishing its mobile applications.
-                Once available, they will appear on our official Google Play developer page.
+                Study like it’s a mission: Pomodoro/Deep Focus sessions, syllabus tracking, XP ranks, tasks,
+                private notes, and optional leaderboard sync.
               </p>
               <p class="coming-sub">
-                For updates, support, or business inquiries, contact us anytime.
+                Available now on Google Play.
               </p>
               <div class="coming-actions">
-                <a href="#contact" class="btn">Contact Us</a>
+                <a
+                  href="https://play.google.com/store/apps/details?id=com.xylenexsia.examhero"
+                  class="btn"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  Get it on Google Play
+                </a>
                 <a href="#privacy" class="btn ghost">Privacy Policy</a>
               </div>
             </div>
@@ -93,28 +106,71 @@
         </div>
       </section>
 
-      <!-- COMING SOON SECTION -->
-      <section id="coming-soon" class="section alt">
+      <!-- EXAMHERO SECTION -->
+      <section id="examhero" class="section alt">
         <div class="container">
           <div class="section-head">
-            <h2>Apps Coming Soon</h2>
+            <h2>ExamHero</h2>
             <p class="muted">
-              We are preparing our first releases. This page will be updated as soon as apps are published.
+              A dark, serious, “Black Ops” productivity system built for students.
             </p>
           </div>
 
-          <div class="card" style="max-width: 860px; margin: 0 auto; text-align: center;">
-            <h3>✅ Official Developer Website</h3>
-            <p>
-              This website belongs to <strong>XYLENEX SIA</strong> and is provided for identification,
-              support, and policy information for our Google Play applications.
-            </p>
-            <p class="muted">
-              Developer ID: <strong>5097653683382524442</strong>
-            </p>
-            <div style="margin-top: 16px;">
-              <a class="btn" href="#contact">Contact Support</a>
-              <a class="btn ghost" href="#terms">Terms</a>
+          <div class="two-col">
+            <div class="info">
+              <h3>Key features</h3>
+              <ul class="bullets">
+                <li><strong>Focus Timer</strong> (Pomodoro / Deep Focus)</li>
+                <li><strong>War Room</strong> syllabus tracking</li>
+                <li><strong>XP & Ranks</strong> gamification</li>
+                <li><strong>Task list</strong> for daily execution</li>
+                <li><strong>Private notes</strong> + camera notepad</li>
+                <li><strong>Optional leaderboard sync</strong></li>
+              </ul>
+
+              <div class="note">
+                <strong>Download:</strong>
+                <a
+                  href="https://play.google.com/store/apps/details?id=com.xylenexsia.examhero"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  ExamHero on Google Play
+                </a>
+              </div>
+            </div>
+
+            <div class="info">
+              <h3>App details</h3>
+              <ul class="list">
+                <li><span>App name</span><strong>ExamHero</strong></li>
+                <li><span>Package</span><strong>com.xylenexsia.examhero</strong></li>
+                <li>
+                  <span>Google Play</span>
+                  <strong>
+                    <a
+                      href="https://play.google.com/store/apps/details?id=com.xylenexsia.examhero"
+                      target="_blank"
+                      rel="noopener"
+                    >
+                      View listing
+                    </a>
+                  </strong>
+                </li>
+                <li><span>Support email</span><strong><a href="mailto:contact@xylenexdev.com">contact@xylenexdev.com</a></strong></li>
+              </ul>
+
+              <div style="margin-top: 16px;">
+                <a
+                  class="btn"
+                  href="https://play.google.com/store/apps/details?id=com.xylenexsia.examhero"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  Install ExamHero
+                </a>
+                <a class="btn ghost" href="#contact">Support</a>
+              </div>
             </div>
           </div>
         </div>
@@ -369,7 +425,7 @@
         </div>
 
         <div class="footer-links">
-          <a href="#coming-soon">Apps</a>
+          <a href="#examhero">ExamHero</a>
           <a href="#about">About</a>
           <a href="#contact">Contact</a>
           <a href="#privacy">Privacy</a>
